# calcifer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PROGRESS.md  README.md  RELEASING.md  WORKFLOW.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
apps/ask/: README.md  pyproject.toml
apps/ask/ask/: __init__.py  app.py
apps/ask/tests/: test_ask.py
apps/chatbot/: README.md  pyproject.toml
apps/chatbot/calcifer_chatbot/: __init__.py  app.py  web.py
apps/chatbot/tests/: conftest.py  test_chatbot.py  test_web.py
apps/tui/: README.md  pyproject.toml
apps/tui/calcifer_tui/: app.py
apps/tui/tui/: __init__.py  app.py
calcifer/: __init__.py  __main__.py  agent.py  cli.py  config.py  tool.py  tool_registry.py
calcifer/constants/: __init__.py
calcifer/coordinator/: __init__.py  coordinator.py
calcifer/harness/: __init__.py  artifacts.py  base.py  pipeline.py  session_loop.py
calcifer/memdir/: __init__.py  retrieval.py  store.py
calcifer/services/: hooks.py  scheduler.py  session.py  side_query.py  token_estimation.py
calcifer/services/api/: __init__.py  normalize.py  provider.py
calcifer/services/compact/: __init__.py  context.py
calcifer/services/mcp/: __init__.py  client.py  tool_adapter.py  transport.py
calcifer/services/tools/: __init__.py  orchestrator.py
calcifer/skills/: __init__.py  executor.py  loader.py
calcifer/tasks/: __init__.py  manager.py  output.py
calcifer/telemetry/: __init__.py  metrics.py  setup.py  spans.py
calcifer/testing/: __init__.py  assertions.py  mock_provider.py
calcifer/tools/: __init__.py
calcifer/tools/BashTool/: __init__.py  bash_tool.py  security.py
calcifer/tools/FileEditTool/: __init__.py  file_edit_tool.py
calcifer/tools/FileReadTool/: __init__.py  file_read_tool.py
calcifer/tools/FileWriteTool/: __init__.py  file_write_tool.py
calcifer/tools/GlobTool/: __init__.py  glob_tool.py
calcifer/tools/GrepTool/: __init__.py  grep_tool.py
calcifer/tools/SkillTool/: __init__.py  skill_tool.py
calcifer/tools/ToolSearchTool/: __init__.py  tool_search_tool.py
calcifer/tools/WebSearchTool/: __init__.py  web_search_tool.py
calcifer/tui/: __init__.py  app.py  renderer.py  theme.py
calcifer/types/: __init__.py  message.py  tools.py
calcifer/utils/: classifier.py  concurrency.py  cost_tracker.py  persist.py  profiling.py  recovery.py  sandbox.py  shutdown.py  thinking.py
calcifer/utils/settings/: __init__.py  settings.py
calcifer/web/: __init__.py  server.py  ui.py
docs/: public-api.md  semver.md  symphony.md  testing.md
examples/: 01_hello.py  02_tool.py  03_stream.py  04_testing.py  05_mcp.py  99_e2e_real_llm.py  README.md  e2e_test.py  harness_example.py
harness/: DESIGN.md  README.md  features.json  harness.py  init.sh  progress.md  reviewer-checklist.md
harness/contracts/: README.md  abort-reason-tracking.md  harness-contract-review.md  mcp-auth-refresh.md  pre-post-tool-hooks.md  sdk-agent-run-sync.md  sdk-builtins-layout.md  sdk-changelog-semver.md  sdk-config-env-defaults.md  sdk-cookbook-examples.md  sdk-core-layout.md  sdk-docs-structure.md  sdk-ext-layout.md  sdk-github-actions-ci.md  sdk-public-api-audit.md  sdk-py-typed-marker.md  sdk-pypi-release-v03.md  sdk-pyproject-metadata.md  sdk-split-cli-package.md  sdk-split-tui-package.md  sdk-split-web-package.md  sdk-testing-module.md  stop-hook-inject-continue.md  when-to-use-skill-field.md  wire-hooks-into-orchestrator.md
harness/reviews/: harness-contract-review.jsonl  sdk-agent-run-sync.jsonl  sdk-changelog-semver.jsonl  sdk-config-env-defaults.jsonl  sdk-github-actions-ci.jsonl  sdk-public-api-audit.jsonl  sdk-py-typed-marker.jsonl  sdk-pypi-release-v03.jsonl  sdk-pyproject-metadata.jsonl  sdk-testing-module.jsonl  when-to-use-skill-field.jsonl
scripts/: DEVELOPMENT.md  dev_harness.py
tests/: test_agent_final_text_history.py  test_ci_workflows.py  test_context.py  test_context_optimizations.py  test_e2e_mcp_skill.py  test_e2e_real.py  test_functional.py  test_harness.py  test_harness_review.py  test_integration.py  test_integrations.py  test_mcp.py  test_mcp_full.py  test_memory.py  test_orchestrator.py  test_p0.py  test_packaging.py  test_provider_streaming_fallback.py  test_settings.py  test_skill.py  test_skill_full.py  test_task.py  test_testing_module.py  test_tool_call_loop_not_diminishing.py  test_tools.py  test_tui_web.py  test_utils_and_edge.py  test_web_search_tool.py  test_wheel_contents.py
tests/fixtures/: mcp_echo_server.py
