[project]
name = "calcifer"
version = "0.3.0.dev0"
description = "Provider-agnostic Python agent runner replicating Claude Code's core mechanisms for OpenAI-compatible APIs"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "headepic", email = "noreply@example.com"}]
requires-python = ">=3.11"
keywords = [
    "agent",
    "llm",
    "openai",
    "claude",
    "agent-runner",
    "tool-calling",
    "mcp",
    "function-calling",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/headepic/calcifer"
Repository = "https://github.com/headepic/calcifer"
Issues = "https://github.com/headepic/calcifer/issues"

[project.optional-dependencies]
tui = [
    "rich>=13.0",
    "prompt-toolkit>=3.0",
]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
tiktoken = ["tiktoken>=0.7"]
mcp = ["mcp>=1.0"]
telemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
all = ["calcifer[tui,web,tiktoken,mcp,telemetry]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "calcifer[tui]",
]

[project.scripts]
calcifer = "calcifer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Explicit packages declaration so the py.typed marker (PEP 561) is shipped
# in the built wheel. Without this, downstream `mypy`/`pyright` users get
# `Any` for every calcifer symbol.
packages = ["calcifer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
