[project]
name = "calcifer"
version = "0.3.0"
description = "Provider-agnostic Python agent runner SDK (self-use, not published)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
telemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
all = ["calcifer[mcp,telemetry]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Explicit packages declaration so the py.typed marker (PEP 561) is shipped
# in the built wheel. Without this, downstream `mypy`/`pyright` users get
# `Any` for every calcifer symbol.
packages = ["calcifer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
