[project]
name = "calcifer-chatbot"
version = "0.1.0"
description = "Interactive chatbot app built on the Calcifer SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "calcifer>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
calcifer-chatbot = "calcifer_chatbot.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["calcifer_chatbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
