[project]
name = "calcifer-tui"
version = "0.1.0"
description = "Minimal terminal chat UI built on the Calcifer agent SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "calcifer>=0.3",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
]

[project.scripts]
calcifer-tui = "calcifer_tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["calcifer_tui"]
